--- a/RNNs.ipynb
+++ b/RNNs.ipynb
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "8542aeff",
    "metadata": {},
    "outputs": [
@@ -189,7 +189,7 @@
     "total_len = 3000\n",
     "data = generate_mackey_glass(length=total_len)\n",
     "train_len = 2000\n",
-    "test_len = 200 # Chúng ta cần ít nhất 100 bước cho Far-future\n",
+    "test_len = 200 # ta cần ít nhất 100 bước cho Far-future\n",
     "\n",
     "inputs  = data[:-1].reshape(-1, 1)\n",
     "targets = data[1:].reshape(-1, 1)\n",
